--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
 .env
-*/migrations/
-
-
-#django
-*.log
-*.pot
-*.pyc
-__pycache__/
-*/__pycache__/
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-media
-/postgres
+.idea
+postgres/
